Solve line-wrap issues with default styling for attribution text

--- a/web-component/src/scss/kortjs.scss
+++ b/web-component/src/scss/kortjs.scss
@@ -1,4 +1,5 @@
 .viewport {
+    box-sizing: border-box;
     position: relative;
     width: 100%;
     height: 100%;
@@ -33,7 +34,7 @@ canvas {
     padding: 2px 6px 6px 6px;
     background: rgba(255, 255, 255, 0.5);
     border-top-left-radius: 4px;
-    font-size: 13px;
+    font-size: clamp(9px, 2vw, 13px);
     margin: 0;
 }
 ::slotted(*) {
